--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.7.4",
     "vue-chartjs": "^5.2.0",
-    "vuetify": "^3.4.8"
+    "vuetify": "^3.4.8",
+    "three": "^0.158.0",
+    "gsap": "^3.12.2",
+    "lottie-web": "^5.12.2"
   }
 }
